merubah nama css

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <title>Tugas 13</title>
     <link rel="shortcut icon" href="/images/logo.png">
-    <link rel="stylesheet" href="w3.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
