merubah ukuran foto

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                     </tr>
                 </table>
             </b>
-            <img src="/images/ganteng.jpg" class="w3-animate-zoom" width="50%" height="50%">
+            <img src="/images/ganteng.jpg" class="w3-animate-zoomw3-card w3-Margin w3-circle" width="30%" height="30%">
         </center>
     </div>
     <div id="Maung" class="w3-container kendaraan" style="display:none">
